Update create / upd user

--- a/templates/accession_agent.erb
+++ b/templates/accession_agent.erb
@@ -4,8 +4,8 @@ SELECT
   udef.accession_id,
   agent.id as agent_<%= data["agent_type"] %>_id,
   0 as aspace_relationship_position,
-  'admin' as created_by,
-  'admin' as last_modified_by,
+  'lyrasis-dts' as created_by,
+  'lyrasis-dts' as last_modified_by,
   NOW() as create_time,
   NOW() as system_mtime,
   NOW() as user_mtime,
