--- a/templates/resource_subject.erb
+++ b/templates/resource_subject.erb
@@ -4,8 +4,8 @@ SELECT
 	udef.resource_id,
   s.id as subject_id,
 	0 as aspace_relationship_position,
-  'admin' as created_by,
-  'admin' as last_modified_by,
+  'lyrasis-dts' as created_by,
+  'lyrasis-dts' as last_modified_by,
   NOW() as system_mtime,
   NOW() as user_mtime,
   0 as suppressed
