--- a/templates/resource_subject.erb
+++ b/templates/resource_subject.erb
@@ -11,7 +11,7 @@ SELECT
   0 as suppressed
 FROM user_defined udef
 JOIN subject s ON s.authority_id = '<%= data["identifier"] %>'
-WHERE udef.resource_id IS NOT NULL
+WHERE udef.resource_id = <%= data["linked_record_id"] %>
 AND   udef.string_2 IS NOT NULL
 AND   udef.string_2 = '<%= data["bib_number"] %>'
 AND   s.id IS NOT NULL;
